# lamp

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  Makefile  README.md  appveyor.yml  azure-pipelines.yml
docs/: CNAME  index.html
make/: .dockerignore  Dockerfile-fpga  Dockerfile-mcu  Dockerfile-mcu-basic  Dockerfile-tool  build-mcu.sh  build-tool.sh  collect-artifacts.sh  docker-compose.yml  fpga.mk  get-simulator-from-appveyor.sh  install-fpga-tools.sh  lamp.mk  mcu-basic.mk  mcu-entrypoint.sh  mcu.mk  tool.mk
make/patches/: 0001-esp-tls.v3.3-beta1.patch  0001-esp-tls.v3.3.1.patch  0001-esp-tls.v3.3.patch  0001-esp-tls.v4.0.1.patch  0002-idf-tools.v4.0.1.patch  0003-mbedtls.v4.0.patch
pki/: .gitignore  intermediate.conf  pki.sh  root.conf
src/dashboard/: LampControl.csproj  LampControl.sln  Program.cs  Startup.cs  WhitelistMiddleware.cs
src/dashboard/Controllers/: HomeController.cs
src/dashboard/Properties/: launchSettings.json
src/dashboard/Services/: DeviceService.cs
src/dashboard/Views/: _ViewImports.cshtml
src/dashboard/Views/Home/: Index.cshtml
src/dashboard/Views/Shared/: _Layout.cshtml
src/fpga/: animator.v  clkdiv.v  driver.v  framebuffer.v  framemanager.v  lamp.pcf  lamp.v  protocol.v
src/mcu/: CMakeLists.txt  partitions.csv  sdkconfig
src/mcu-basic/: IrReceiver.cpp  IrReceiver.h  LedBoardChain.cpp  LedBoardChain.h  Platform.cpp  Platform.h  RgbLed.cpp  RgbLed.h  Timing.cpp  Timing.h  lamp.c  lamp.cpp  uart.h
src/mcu-basic/stl/: algorithm  new.h
src/mcu/components/azureiot/: AzureIot.cpp  AzureIot.h  AzureIotClient.cpp  AzureIotClient.h  CMakeLists.txt  DpsClient.cpp  DpsClient.h  component.mk  hsm.c
src/mcu/components/azureiot/port/: agenttime_esp.c  hsm.c  platform_esp.c  sntp_os.h  socket_async_os.h  socketio.c  tlsio_esp_atca.c
src/mcu/components/constants/: constants.h
src/mcu/components/cpp_utils/: README.md  WiFi.cpp  WiFi.h
src/mcu/components/cryptoauthlib/: CMakeLists.txt  component.mk
src/mcu/components/cryptoauthlib_hal/: CMakeLists.txt  component.mk  hal_esp32_i2c.c
src/mcu/components/esp-tls/: component.mk  esp_tls.c  esp_tls.h
src/mcu/components/factory/: CMakeLists.txt  Factory.cpp  Factory.h  component.mk  iokey.h  nvscrt.h
src/mcu/components/httpclient/: CMakeLists.txt  HttpClient.cpp  HttpClient.h
src/mcu/components/httpserver/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  component.mk  mongoose.c  mongoose.h
src/mcu/components/i2c/: CMakeLists.txt  i2c.c  i2c.h
src/mcu/components/interop/: CMakeLists.txt  fnptr.h
src/mcu/components/irreceiver/: CMakeLists.txt  IrReceiver.cpp  IrReceiver.h
src/mcu/components/lamp-core/: CMakeLists.txt  component.mk
src/mcu/components/ledboardchain/: CMakeLists.txt  LedBoardChain.cpp  LedBoardChain.h
src/mcu/components/lightsensor/: CMakeLists.txt  LightSensor.cpp  LightSensor.h  TSL2591.cpp  TSL2591.h
src/mcu/components/logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/mcu/components/mbedtls-mods/: Makefile.projbuild  component.mk  project_include.cmake
src/mcu/components/memmon/: CMakeLists.txt  MemMon.cpp  MemMon.h
src/mcu/components/microphone/: CMakeLists.txt  Microphone.cpp  Microphone.h
src/mcu/components/platform/: CMakeLists.txt  Platform.cpp  Platform.h  constants.h
src/mcu/components/rgbled/: CMakeLists.txt  RgbLed.cpp  RgbLed.h
src/mcu/components/spi/: CMakeLists.txt  SPI.cpp  SPI.h  Spi.cpp  Spi.h  SpiFlash.cpp  SpiFlash.h
src/mcu/components/storage/: CMakeLists.txt  Storage.cpp  Storage.h
src/mcu/components/updater/: CMakeLists.txt  Updater.cpp  Updater.h  component.mk  genver.sh
src/mcu/components/wolfssl/: component.mk  (+1 more)
src/mcu/core/: HttpHandler.cpp  HttpHandler.h  IHttpClient.h  IIotClient.h  IIotFramework.h  IIotHandler.h  IIrHandler.h  IIrReceiver.h  ILedBoardChain.h  ILightSensor.h  INvs.h  IPlatform.h  IRgbLed.h  IStorage.h  ITiming.h  IUpdater.h  IWiFiClient.h  IWiFiHandler.h  IotHandler.cpp  IotHandler.h  IrHandler.cpp  IrHandler.h  Lamp.cpp  Lamp.h  LedsManager.cpp  LedsManager.h  UpgradeManager.cpp  UpgradeManager.h  WiFiHandler.cpp  WiFiHandler.h
src/mcu/main/: CMakeLists.txt  Kconfig.projbuild  constants.h  main.cpp
test/fpga/: lamp_tb.v
test/simulator/: .editorconfig  .gitignore  Lamp.sln
test/simulator/Lamp.Core/: Lamp.Core.vcxproj
test/simulator/Lamp.Interop/: AbstractHttpClient.cpp  AbstractHttpClient.h  AbstractHttpServer.cpp  AbstractHttpServer.h  AbstractIotClient.cpp  AbstractIotClient.h  AbstractIotFramework.cpp  AbstractIotFramework.h  AbstractIrReceiver.cpp  AbstractIrReceiver.h  AbstractLedBoardChain.cpp  AbstractLedBoardChain.h  AbstractLightSensor.cpp  AbstractLightSensor.h  AbstractLogger.cpp  AbstractLogger.h  AbstractNvs.cpp  AbstractNvs.h  AbstractPlatform.cpp  AbstractPlatform.h  AbstractRgbLed.cpp  AbstractRgbLed.h  AbstractUpdater.cpp  AbstractUpdater.h  AbstractWiFiClient.cpp  AbstractWiFiClient.h  AssemblyInfo.cpp  HttpHandlerWrapper.cpp  HttpHandlerWrapper.h  IotHandlerWrapper.cpp  IotHandlerWrapper.h  IrHandlerWrapper.cpp  IrHandlerWrapper.h  Lamp.Interop.vcxproj  LampWrapper.cpp  LampWrapper.h  MarshalHelper.cpp  MarshalHelper.h  Stdafx.h  WiFiHandlerWrapper.cpp  (+2 more)
test/simulator/Lamp.Simulator/: App.xaml  App.xaml.cs  HttpClient.cs  HttpServer.cs  HttpWebRequestExt.cs  IotClient.cs  IotFramework.cs  IrReceiver.cs  Lamp.Simulator.csproj  Led.xaml  Led.xaml.cs  LedArray.cs  LedBoard.xaml  LedBoard.xaml.cs  LedDisplay.xaml  LedDisplay.xaml.cs  LedGroup.xaml  LedGroup.xaml.cs  LedPanel.xaml  LedPanel.xaml.cs  LightSensor.cs  Logger.cs  MainWindow.xaml  MainWindow.xaml.cs  Nvs.cs  Platform.cs  RemoteControl.xaml  RemoteControl.xaml.cs  RgbLed.cs  Updater.cs  WiFiClient.cs
test/testboard/: DM633.cpp  DM633.h  README.md  testboard.ino
tool/: go.mod  go.sum  intermediate.conf  main.go
tool/config/: config.json  hsm.conf  intermediate.conf  root.conf  setupHsm.sh
tool/helper/: command.go  file.go
tool/model/: config.go  csr.go
tool/pki/: openssl.go  pki.go
tool/protocol/: protocol.go
tool/provision/: certificate.go  config.go  data.go  provision.go
(+14 files in other folders)
