set (srcs
    "DpsClient.cpp"
    "AzureIot.cpp"
    "AzureIotClient.cpp"
    "port/agenttime_esp.c"
    "port/platform_esp.c"
    "port/tlsio_esp_atca.c"
    "port/hsm.c"
    "port/socketio.c"
    "azure-iot-sdk-c/c-utility/pal/freertos/lock.c"
    "azure-iot-sdk-c/c-utility/pal/socket_async.c"
    "azure-iot-sdk-c/c-utility/pal/freertos/threadapi.c"
    "azure-iot-sdk-c/c-utility/pal/freertos/tickcounter.c"
    "azure-iot-sdk-c/c-utility/pal/tlsio_options.c"
    "azure-iot-sdk-c/c-utility/src/xlogging.c"
    "azure-iot-sdk-c/c-utility/src/singlylinkedlist.c"
    "azure-iot-sdk-c/c-utility/src/buffer.c"
    "azure-iot-sdk-c/c-utility/src/consolelogger.c"
    "azure-iot-sdk-c/c-utility/src/constbuffer.c"
    "azure-iot-sdk-c/c-utility/src/constmap.c"
    "azure-iot-sdk-c/c-utility/src/crt_abstractions.c"
    "azure-iot-sdk-c/c-utility/src/doublylinkedlist.c"
    "azure-iot-sdk-c/c-utility/src/gballoc.c"
    "azure-iot-sdk-c/c-utility/src/gb_rand.c"
    "azure-iot-sdk-c/c-utility/src/gb_stdio.c"
    "azure-iot-sdk-c/c-utility/src/gb_time.c"
    "azure-iot-sdk-c/c-utility/src/hmac.c"
    "azure-iot-sdk-c/c-utility/src/hmacsha256.c"
    "azure-iot-sdk-c/c-utility/src/httpapiex.c"
    "azure-iot-sdk-c/c-utility/src/httpapiexsas.c"
    "azure-iot-sdk-c/c-utility/src/httpheaders.c"
    "azure-iot-sdk-c/c-utility/src/map.c"
    "azure-iot-sdk-c/c-utility/src/optionhandler.c"
    "azure-iot-sdk-c/c-utility/src/sastoken.c"
    "azure-iot-sdk-c/c-utility/src/sha1.c"
    "azure-iot-sdk-c/c-utility/src/sha224.c"
    "azure-iot-sdk-c/c-utility/src/sha384-512.c"
    "azure-iot-sdk-c/c-utility/src/strings.c"
    "azure-iot-sdk-c/c-utility/src/string_tokenizer.c"
    "azure-iot-sdk-c/c-utility/src/urlencode.c"
    "azure-iot-sdk-c/c-utility/src/usha.c"
    "azure-iot-sdk-c/c-utility/src/utf8_checker.c"
    "azure-iot-sdk-c/c-utility/src/uws_client.c"
    "azure-iot-sdk-c/c-utility/src/uws_frame_encoder.c"
    "azure-iot-sdk-c/c-utility/src/vector.c"
    "azure-iot-sdk-c/c-utility/src/wsio.c"
    "azure-iot-sdk-c/c-utility/src/xio.c"
    "azure-iot-sdk-c/iothub_client/src/iothub_device_client_ll.c"
    "azure-iot-sdk-c/iothub_client/src/iothub_client_ll.c"
    "azure-iot-sdk-c/iothub_client/src/iothub_client_core_ll.c"
    "azure-iot-sdk-c/iothub_client/src/iothub_client_ll_uploadtoblob.c"
    "azure-iot-sdk-c/iothub_client/src/iothub_client_authorization.c"
    "azure-iot-sdk-c/iothub_client/src/iothub_client_retry_control.c"
    "azure-iot-sdk-c/iothub_client/src/iothub_client_diagnostic.c"
    "azure-iot-sdk-c/iothub_client/src/iothub_message.c"
    "azure-iot-sdk-c/iothub_client/src/iothubtransport.c"
    "azure-iot-sdk-c/iothub_client/src/iothubtransportmqtt.c"
    "azure-iot-sdk-c/iothub_client/src/iothubtransport_mqtt_common.c"
    "azure-iot-sdk-c/iothub_client/src/iothub_transport_ll_private.c"
    "azure-iot-sdk-c/iothub_client/src/version.c"
    "azure-iot-sdk-c/umqtt/src/mqtt_client.c"
    "azure-iot-sdk-c/umqtt/src/mqtt_codec.c"
    "azure-iot-sdk-c/umqtt/src/mqtt_message.c"
    "azure-iot-sdk-c/deps/parson/parson.c"
    "azure-iot-sdk-c/serializer/src/codefirst.c"
    "azure-iot-sdk-c/serializer/src/agenttypesystem.c"
    "azure-iot-sdk-c/serializer/src/commanddecoder.c"
    "azure-iot-sdk-c/serializer/src/datamarshaller.c"
    "azure-iot-sdk-c/serializer/src/datapublisher.c"
    "azure-iot-sdk-c/serializer/src/dataserializer.c"
    "azure-iot-sdk-c/serializer/src/iotdevice.c"
    "azure-iot-sdk-c/serializer/src/jsondecoder.c"
    "azure-iot-sdk-c/serializer/src/jsonencoder.c"
    "azure-iot-sdk-c/serializer/src/methodreturn.c"
    "azure-iot-sdk-c/serializer/src/multitree.c"
    "azure-iot-sdk-c/serializer/src/schema.c"
    "azure-iot-sdk-c/serializer/src/schemalib.c"
    "azure-iot-sdk-c/serializer/src/schemaserializer.c"
    "azure-iot-sdk-c/provisioning_client/src/prov_device_client.c"
    "azure-iot-sdk-c/provisioning_client/src/prov_transport_mqtt_ws_client.c"
    "azure-iot-sdk-c/provisioning_client/src/prov_transport_mqtt_client.c"
    "azure-iot-sdk-c/provisioning_client/src/prov_transport_mqtt_common.c"
    "azure-iot-sdk-c/provisioning_client/src/prov_security_factory.c"
    "azure-iot-sdk-c/provisioning_client/src/prov_device_ll_client.c"
    "azure-iot-sdk-c/provisioning_client/src/iothub_auth_client.c"
    "azure-iot-sdk-c/provisioning_client/src/iothub_security_factory.c"
    "azure-iot-sdk-c/provisioning_client/adapters/hsm_client_data.c"
    "azure-iot-sdk-c/provisioning_client/src/prov_auth_client.c"
    "azure-iot-sdk-c/iothub_client/src/iothub.c"
    "azure-iot-sdk-c/c-utility/src/http_proxy_io.c"
    "azure-iot-sdk-c/c-utility/src/azure_base64.c"
    "azure-iot-sdk-c/c-utility/src/azure_base32.c"
)

set (incs
    "."
    "port"
    "azure-iot-sdk-c/c-utility/inc"
    #"azure-iot-sdk-c/c-utility/inc/azure_c_shared_utility"
    "azure-iot-sdk-c/c-utility/pal/inc"
    "azure-iot-sdk-c/c-utility/pal/freertos"
    "azure-iot-sdk-c/c-utility/pal/generic"
    "azure-iot-sdk-c/deps/azure-macro-utils-c/inc"
    "azure-iot-sdk-c/deps/umock-c/inc"
    "azure-iot-sdk-c/iothub_client/inc"
    "azure-iot-sdk-c/serializer/inc"
    "azure-iot-sdk-c/umqtt/inc"
    "azure-iot-sdk-c/umqtt/inc/azure_umqtt_c"
    "azure-iot-sdk-c/deps/parson"
    "azure-iot-sdk-c/provisioning_client/inc"
    "azure-iot-sdk-c/provisioning_client/adapters"
    )

idf_component_register(SRCS "${srcs}"
                       INCLUDE_DIRS "${incs}"
                       REQUIRES mbedtls lamp-core esp-tls constants
                       PRIV_REQUIRES cryptoauthlib factory)

add_definitions(-DUSE_LWIP_SOCKET_FOR_AZURE_IOT -DHSM_TYPE_X509 -DUSE_PROV_MODULE)