# https://github.com/MicrochipTech/cryptoauthlib/issues/5#issuecomment-433541966

set (CRYPTOAUTHLIB_DIR "${CMAKE_CURRENT_LIST_DIR}/cryptoauthlib/lib")

set (srcs
    "${CRYPTOAUTHLIB_DIR}/atcacert/atcacert_client.c"
    "${CRYPTOAUTHLIB_DIR}/atcacert/atcacert_date.c"
    "${CRYPTOAUTHLIB_DIR}/atcacert/atcacert_def.c"
    "${CRYPTOAUTHLIB_DIR}/atcacert/atcacert_der.c"
    "${CRYPTOAUTHLIB_DIR}/atcacert/atcacert_host_hw.c"
    "${CRYPTOAUTHLIB_DIR}/atcacert/atcacert_host_sw.c"
    "${CRYPTOAUTHLIB_DIR}/atcacert/atcacert_pem.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_aes.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_aes_cbc.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_aes_cmac.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_aes_ctr.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_aes_gcm.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_checkmac.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_counter.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_derivekey.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_ecdh.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_gendig.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_genkey.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_hmac.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_info.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_kdf.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_lock.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_mac.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_nonce.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_privwrite.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_random.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_read.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_secureboot.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_selftest.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_sha.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_sign.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_updateextra.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_verify.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_basic_write.c"
    "${CRYPTOAUTHLIB_DIR}/basic/atca_helpers.c"
    "${CRYPTOAUTHLIB_DIR}/crypto/atca_crypto_sw_ecdsa.c"
    "${CRYPTOAUTHLIB_DIR}/crypto/atca_crypto_sw_rand.c"
    "${CRYPTOAUTHLIB_DIR}/crypto/atca_crypto_sw_sha1.c"
    "${CRYPTOAUTHLIB_DIR}/crypto/atca_crypto_sw_sha2.c"
    "${CRYPTOAUTHLIB_DIR}/crypto/hashes/sha1_routines.c"
    "${CRYPTOAUTHLIB_DIR}/crypto/hashes/sha2_routines.c"
    "${CRYPTOAUTHLIB_DIR}/host/atca_host.c"
    "${CRYPTOAUTHLIB_DIR}/mbedtls/atca_mbedtls_ecdh.c"
    "${CRYPTOAUTHLIB_DIR}/mbedtls/atca_mbedtls_ecdsa.c"
    "${CRYPTOAUTHLIB_DIR}/mbedtls/atca_mbedtls_wrap.c"  
    "${CRYPTOAUTHLIB_DIR}/atca_cfgs.c"
    "${CRYPTOAUTHLIB_DIR}/atca_command.c"
    "${CRYPTOAUTHLIB_DIR}/atca_device.c"
    "${CRYPTOAUTHLIB_DIR}/atca_execution.c"
    "${CRYPTOAUTHLIB_DIR}/atca_iface.c"
    )

idf_component_register(SRCS "${srcs}"
                       INCLUDE_DIRS "${CRYPTOAUTHLIB_DIR}"
                       REQUIRES cryptoauthlib_hal mbedtls)
           
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-error=char-subscripts")
add_definitions(-DESP32 -DATCA_HAL_I2C -DATCA_PRINTF)